<resources>
    <string name="app_name">examenIB</string>
    <string name="str_btn_crear">CREAR</string>
    <string name="str_btn_listar">LISTAR</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Fechadenacimiento">Fechadenacimiento</string>
    <string name="NumeroAutos">NumeroAutos</string>
    <string name="Licencia">Licencia</string>
    <string name="crear_conductor">crear_conductor</string>
    <string name="title_activity_listar">ListarActivity</string>
    <string name="botonDetalle">Detalle</string>
    <string name="Detalle">buttonDetalle</string>
    <string name="button_detalle">Detalle</string>
</resources>
