<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="CREAR CONDUCTOR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="67dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:text="Nombres"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/Nombres" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="Apellidos"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/Apellidos" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="FechaNacimiento"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/Fechadenacimiento" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="88dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="numeroAutos"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/NumeroAutos" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="LicenciaValida"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/Licencia" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chasis"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="275dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="162dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="136dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="162dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_editor_absoluteX="136dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="163dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_editor_absoluteX="136dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="164dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:layout_editor_absoluteX="136dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="161dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="RadioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="136dp" />

</android.support.constraint.ConstraintLayout>